--- a/android/app/src/main/res/xml/device_filter.xml
+++ b/android/app/src/main/res/xml/device_filter.xml
@@ -24,4 +24,6 @@
     <!-- 0x1366 / 0x0105: CH340 JLink -->
     <usb-device vendor-id="1A86" product-id="7523" />
 
+    <usb-device vendor-id="2049" product-id="25"/>
+
 </resources>
